maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:7: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
    if (getDirection == Direction.NORD && sommeAngle =0) {
                                       ^