maze.lessons.maze.pledge.PledgeMaze.scala.code
override def run() {
  var sommeAngle = 0
  while (!estSurBiscuit()) {
    while (getY() != 0) {
    keepHandOnSideWall1()
    if (getDirection == Direction.NORD && sommeAngle =0) {
      avance()
    }
  }
    droite()
    while (!estSurBiscuit()) {
      keepHandOnSideWall()
    }
  }
  prendBiscuit()
  
  def keepHandOnSideWall1() {
    gauche()
    sommeAngle = sommeAngle + 1
    while (estFaceMur()) {
      droite()
      sommeAngle = sommeAngle - 1
    }
    avance()
    if (getDirection == Direction.OUEST) {
      droite()
      while (!estFaceMur()) {
        avance()
      }
    }
    while (getDirection == Direction.NORD && !estFaceMur()) {
      avance()
    }
  }
  
  def keepHandOnSideWall() {
    gauche()
    while (estFaceMur()) {
      droite()
    }
    avance()
  }
  
  def isDirectionFree(dir:Direction):Boolean = {
    var directionCourante = getDirection()
    setDirection(dir)
    if (!estFaceMur()) {
      setDirection(directionCourante)
      return true
    }
    setDirection(directionCourante)
    return false
  }
}